// Student Management System Schema with Attendance Tracking

// --- Managementul Utilizatorilor ---

Enum study_cycle_type {
  Licenta
  Master
}

Enum financing_type {
  Buget
  Taxa
}

Enum student_status_type {
  Activ
  Suspendat
  Exmatriculat
}
Table teachers {
  id integer [pk, increment]
  email varchar [unique, not null]
  password varchar [not null]
  name varchar [not null]
  is_admin boolean [default: false] // Aici rezolvi problema adminului
  created_at timestamp [default: `now()`]
}

Table students {
  id integer [pk, increment]
  email varchar [unique, not null]
  password varchar [not null]
  name varchar [not null]
  group_id integer [not null]
  start_year integer [note: 'Year student started studies']
  study_cycle enum('Licenta','Master') [default: 'Licenta']
  study_year integer [default: 1]
  financing_type enum('Buget','Taxa') [default: 'Buget']
  student_status enum('Activ','Suspendat','Exmatriculat') [default: 'Activ']
  created_at timestamp [default: `now()`]
}

// --- Structura Academică de Bază ---

Table student_groups {
  id integer [pk, increment]
  name varchar [not null, note: 'Ex: 1210A']
  created_at timestamp [default: `now()`]
}

// --- Materii și Laboratoare ---

Table courses {
  id integer [pk, increment]
  name varchar [not null]
  teacher_id integer [not null]
  year integer [default: 1, note: '1, 2, 3, 4 for bachelor years']
  semester integer [default: 1, note: '1 or 2']
  is_optional boolean [default: false]
  course_file varchar [note: 'Path to course file']
  created_at timestamp [default: `now()`]
}

Table course_lab_instructors {
  id integer [pk, increment]
  course_id integer [not null]
  teacher_id integer [not null]
  created_at timestamp [default: `now()`]

  indexes {
    (course_id, teacher_id) [unique]
  }
}

Table laboratories {
  id integer [pk, increment]
  course_id integer [not null]
  lab_number integer [not null, note: '1-14']
  topic varchar [not null, default: 'Laboratory']
  created_at timestamp [default: `now()`]

  indexes {
    (course_id, lab_number) [unique]
  }
}

// --- Logica de Pseudo-Grupe (Formațiuni de Studiu) ---

Table study_groups {
  id integer [pk, increment]
  name varchar [not null, note: 'Ex: Grupa 1210 - Materie X sau Pseudo-Grupa Optional Y']
  course_id integer [not null]
  created_at timestamp [default: `now()`]
}

Table study_group_members {
  id integer [pk, increment]
  study_group_id integer [not null]
  student_id integer [not null]

  indexes {
    (study_group_id, student_id) [unique]
  }
}

// --- Planificare și Prezență ---

Table sessions {
  id integer [pk, increment]
  course_id integer [not null]
  laboratory_number integer [not null, default: 1]
  study_group_id integer [not null]
  session_date datetime [not null]
  topic varchar
  created_at timestamp [default: `now()`]
}

Table attendance {
  id integer [pk, increment]
  student_id integer [not null]
  session_id integer [not null]
  status varchar [not null, note: 'present, absent']
  recorded_at timestamp [default: `now()`]

  indexes {
    (student_id, session_id) [unique]
  }
}

// --- Relații ---

Ref: courses.teacher_id > teachers.id
Ref: course_lab_instructors.course_id > courses.id
Ref: course_lab_instructors.teacher_id > teachers.id
Ref: students.group_id > student_groups.id
Ref: laboratories.course_id > courses.id

Ref: study_groups.course_id > courses.id
Ref: study_group_members.study_group_id > study_groups.id
Ref: study_group_members.student_id > students.id

Ref: sessions.course_id > courses.id
Ref: sessions.study_group_id > study_groups.id
Ref: attendance.student_id > students.id
Ref: attendance.session_id > sessions.id

